# tg-shop-bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  task.md
admin/: Dockerfile  docker-entrypoint.sh  pyproject.toml
bot/: .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  main.py  pyproject.toml
bot/alembic/: env.py
bot/app/bot/: bot.py  broadcast.py  callbacks.py  filters.py  order_notifier.py
bot/app/bot/dialogs/: __init__.py
bot/app/bot/dialogs/flows/cart/: dialogs.py  getters.py  handlers.py  states.py
bot/app/bot/dialogs/flows/catalog/: dialogs.py  getters.py  handlers.py  states.py
bot/app/bot/dialogs/flows/main/: dialogs.py  getters.py  handlers.py  states.py
bot/app/bot/dialogs/flows/order/: dialogs.py  getters.py  handlers.py  states.py
bot/app/bot/handlers/: __init__.py  admin.py  commands.py  errors.py  faq.py
bot/app/bot/middlewares/: database.py  get_user.py  shadow_ban.py  subscription.py
bot/app/bot/services/: order.py
bot/app/bot/states/: states.py
bot/app/config/: loader.py  models.py  settings.py
bot/app/infrastructure/: log_setup.py
bot/app/infrastructure/database/: db.py  exceptions.py
bot/app/infrastructure/database/connection/: base.py  psycopg_connection.py
bot/app/infrastructure/database/models/: cart.py  catalog.py  client.py  faq.py  order.py
bot/app/infrastructure/database/tables/: bot_settings.py  broadcasts.py  cart.py  catalog.py  clients.py  faq.py  orders.py
bot/app/services/parsers/: file_names_parser.py
bot/config/: settings.toml
webapp/: .gitignore  Dockerfile  (+3 more)
(+98 files in other folders)
